SOFTWARE/OS VERSIONS Windows: macOS: Linux/KDE Plasma: (available in About System) KDE Plasma Version: KDE Frameworks Version: Qt Version: ADDITIONAL INFORMATION
Git commit 9f798eae41b838aa60b3d9da73ba3b1b14138055 by Dag Andersen. Committed on 03/12/2019 at 08:17. Pushed by danders into branch '3.2'. Bug 414783 - Remaining effort not merged if nothing else has changed FIXED-IN: 3.2.2 M +1 -1 src/libs/ui/kptworkpackagemergedialog.cpp https://commits.kde.org/calligraplan/9f798eae41b838aa60b3d9da73ba3b1b14138055
Git commit 832b1e25caf9fda14bf61dc4725346e3d6c98284 by Dag Andersen. Committed on 10/12/2019 at 10:51. Pushed by danders into branch 'master'. Bug 414783 - Remaining effort not merged if nothing else has changed FIXED-IN: 3.2.2 (cherry picked from commit 9f798eae41b838aa60b3d9da73ba3b1b14138055) M +1 -1 src/libs/ui/kptworkpackagemergedialog.cpp https://commits.kde.org/calligraplan/832b1e25caf9fda14bf61dc4725346e3d6c98284