Bug 414783 - Remaining effort not merged if nothing else has changed

BUG: 414783
FIXED-IN: 3.2.2